# patreon-api

./: Cargo.toml
src/: endpoints.rs  error.rs  lib.rs  oauth.rs  pagination_options.rs  patreon_client.rs
src/rest/: endpoints.rs  includes.rs  mod.rs  patreon_client.rs
src/types/: address.rs  benefit.rs  campaign.rs  goal.rs  includes.rs  member.rs  mod.rs  pledge_event.rs  post.rs  response.rs  tier.rs  user.rs
