[package]
name = "patreon-api"
version = "0.1.0"
edition = "2021"

[dependencies]
url = { version = "*", default-features = false }
bitflags = { version = "*", default-features = false }
reqwest = { version = "*", default-features = false, features = [
    "default-tls",
    "json",
] }
serde = { version = "*", default-features = false, features = ["derive"] }
serde_json = { version = "*", default-features = false }
