[package]
name = "patreon-api"
version = "0.1.0"
edition = "2021"

[lints.clippy]
large_enum_variant = "allow"

[dependencies]
url = { version = "*", default-features = false }
bitflags = { version = "*", default-features = false }
reqwest = { version = "*", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "*", default-features = false, features = ["derive"] }
serde_json = { version = "*", default-features = false, features = ["std"] }
chrono = { version = "*", default-features = false, features = ["serde"] }

[dev-dependencies]
tokio = { version = "*", default-features = false, features = ["macros"] }
